--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
       </section>
 
     <!-- </main> -->
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Ashong Abdallah</a>.
+    </div>
 
 </body>
 </html>
